--- a/app/src/components/Hero/hero.module.css
+++ b/app/src/components/Hero/hero.module.css
@@ -2,43 +2,52 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   padding: 20px;
   /* background-color: #f5f5f5; */
-  min-height: 500px;
+  min-height: 498px;
 }
 
+
+.intro {
+  width: 50%;
+  /* flex: 1; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* padding: 20px; */
+  max-height: 241px;
+}
 .name {
   font-size: 52px;
   font-weight: 800;
   color: #111827;
+  margin: 0;
   /* font-family: "Poppins",sans-serif; */
 }
 
 .description {
-  font-size: 22px;
-  font-weight: 800;
+  font-size: 13px;
+  /* font-weight: 800; */
   color: #737C8C;
+  margin: 1em 0;
   /* font-family: "Poppins",sans-serif; */
 }
 
-.intro {
-  flex: 1;
-  padding: 20px;
-}
 
 .imageContainer {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  /* padding: 20px; */
   position: relative;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 
 .diamond {
-  width: 300px; /* Adjust width as needed */
-  height: 300px; /* Adjust height as needed */
+  width: 350px; /* Adjust width as needed */
+  height: 350px; /* Adjust height as needed */
   position: relative;
   transform: rotate(45deg);
   overflow: hidden;
