--- a/app/src/components/Skills/skills.module.css
+++ b/app/src/components/Skills/skills.module.css
@@ -1,12 +1,12 @@
 .skills {
-  padding: 20px;
+  /* padding: 20px; */
   /* background-color: #f5f5f5; */
 }
 
 .heading {
-  text-align: center;
-  font-family: Arial, sans-serif;
-  font-weight: bold;
+  /* text-align: center; */
+  /* font-family: Arial, sans-serif; */
+  /* font-weight: bold; */
   margin: 20px 0;
   color: #333;
 }
