--- a/app/src/components/Hero/hero.module.css
+++ b/app/src/components/Hero/hero.module.css
@@ -40,15 +40,17 @@
   width: 350px;
   height: 350px;
   position: relative;
-  transform: rotate(45deg);
+  /* transform: rotate(45deg); */
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 8px;
+
 }
 
 .heroImage {
-  transform: rotate(-45deg);
+  /* transform: rotate(0deg); */
   border-radius: 8px;
   width: 100%;
   height: 100%;
